--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-  background-color: #333;
+  background-color: #725d5d;
   color: white;
   padding: 15px 0;
   text-align: center;
@@ -19,7 +19,7 @@ nav {
 }
 
 nav a {
-  color: white;
+  color: rgb(65, 20, 214);
   text-decoration: none;
   padding: 14px 20px;
   display: inline-block;
@@ -34,7 +34,7 @@ main {
 }
 
 footer {
-  background-color: #333;
+  background-color: #4e0202;
   color: white;
   text-align: center;
   padding: 10px;
